[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "randomplus"
version = "0.1.0"
description = "An enhanced random utility module with extra flavor."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
    { name = "Py Genius" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = []

[tool.hatch.build.targets.wheel]
packages = ["src/randomplus"]
